[tool.poetry]
name = "confluencechat"
version = "0.1.0"
description = ""
authors = ["joao.castilho <joao.castilho@outsystems.com>"]
readme = "README.md"

packages = [
    { include = "confluence_rag" }
]

[tool.poetry.scripts]
confluence-rag = "confluence_rag.loaders.data_loader:cli"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.6"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.4"
langchain-ollama = "^0.2.0"
atlassian-python-api = "^3.41.16"
lxml = "^5.3.0"
markdownify = "^0.13.1"
chromadb = "^0.5.17"
gradio = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

